# storage/api-docs/api-docs.json
@@ -164,6 +164,53 @@
                 }
             }
         },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "LOGOUT USER"
+                ],
+                "summary": "User Logout",
+                "description": "Logout user",
+                "operationId": "Logout",
+                "responses": {
+                    "201": {
+                        "description": "User is disconnected",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "User is disconnected",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/auth/user-profile": {
             "get": {
                 "tags": [
